[gd_scene load_steps=6 format=3 uid="uid://c1ijswxhol7ff"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_ljqv0"]
[ext_resource type="Texture2D" uid="uid://qe0p2hetwppn" path="res://Assets/Button/play.png" id="2_mcu0r"]
[ext_resource type="FontFile" uid="uid://bpveyn7sb2aho" path="res://Assets/Fonts/AfacadFlux-VariableFont_slnt,wght.ttf" id="2_q2ml1"]
[ext_resource type="Texture2D" uid="uid://s3u2yeejxxpa" path="res://Assets/Button/highscore.png" id="3_7ol4b"]

[sub_resource type="LabelSettings" id="LabelSettings_x0o0u"]
font = ExtResource("2_q2ml1")
font_size = 224
outline_size = 12
outline_color = Color(0.9, 0.9, 0.9, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ljqv0")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.048
anchor_right = 0.5
anchor_bottom = 0.048
offset_left = -397.0
offset_right = 397.0
offset_bottom = 262.0
grow_horizontal = 2
text = "Paddle Up"
label_settings = SubResource("LabelSettings_x0o0u")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.738
anchor_right = 0.5
anchor_bottom = 0.738
offset_left = -128.0
offset_top = -317.0
offset_right = 128.0
offset_bottom = 317.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 210

[node name="Play" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_mcu0r")
ignore_texture_size = true
stretch_mode = 0

[node name="HighScores" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_7ol4b")
ignore_texture_size = true
stretch_mode = 0

[connection signal="button_down" from="VBoxContainer/Play" to="." method="_on_play_button_down"]
[connection signal="button_up" from="VBoxContainer/Play" to="." method="_on_play_button_up"]
[connection signal="button_down" from="VBoxContainer/HighScores" to="." method="_on_high_scores_button_down"]
[connection signal="button_up" from="VBoxContainer/HighScores" to="." method="_on_high_scores_button_up"]
